# bizi_analytics

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docker-compose.yml.bck  entrypoint.sh  main.py  pyproject.toml
nginx/: default.conf
src/config/: settings.py  urls.py
src/core/: admin.py  models.py  urls.py  views.py
src/core/management/commands/: actualizar_capacidades.py  cargar_datos.py  cleanup_old_records.py  iniciar_monitor.py
src/core/migrations/: 0001_initial.py  0002_rename_id_estacion_id_externo.py  0003_alter_estacion_capacidad_total.py
src/core/templates/core/: analitica.html  base.html  detalle_estacion.html  lista_estaciones.html  mapa_estaciones.html  planificador.html  radar.html
src/core/templates/core/includes/: navbar.html  selector_modal.html
